crates/flux-parity/tests/snapshots/parity__parity_b310_refs.snap
---
source: crates/flux-parity/tests/parity.rs
expression: serialized
---
verdict: lowerer-unsupported
status: LowererUnsupported

dev    == [
    Component {
        name: "LoginForm",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "TextField",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "TextField",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
swift  == []
kotlin == []
