crates/flux-parity/tests/snapshots/parity__parity_b32_generic.snap
---
source: crates/flux-parity/tests/parity.rs
assertion_line: 41
expression: serialized
---
verdict: equivalent

 dev    == [
    Component {
        name: "Counter",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
swift  == [
    Component {
        name: "Counter",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
kotlin == [
    Component {
        name: "Counter",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
