crates/flux-parity/tests/snapshots/parity__parity_b34_lifecycle.snap
---
source: crates/flux-parity/tests/parity.rs
expression: serialized
---
verdict: equivalent

 dev    == [
    Component {
        name: "Chat",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    ForEach {
                        collection: "messages",
                        key_path: "key:.self",
                    },
                ],
            },
        ],
    },
]
swift  == [
    Component {
        name: "Chat",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    ForEach {
                        collection: "messages",
                        key_path: "key:.self",
                    },
                ],
            },
        ],
    },
]
kotlin == [
    Component {
        name: "Chat",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    ForEach {
                        collection: "messages",
                        key_path: "key:.self",
                    },
                ],
            },
        ],
    },
]
