crates/flux-parity/tests/snapshots/parity__parity_b35_navigation.snap
---
source: crates/flux-parity/tests/parity.rs
assertion_line: 41
expression: serialized
---
verdict: equivalent

 dev    == [
    Component {
        name: "App",
        children: [
            Router {
                children: [
                    Screen {
                        route: "\"home\"",
                        children: [
                            Primitive {
                                name: "Home",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                    Screen {
                        route: "\"profile\"",
                        children: [
                            Primitive {
                                name: "Profile",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                    Screen {
                        route: "\"settings\"",
                        children: [
                            Primitive {
                                name: "Settings",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
    Component {
        name: "Home",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
    Component {
        name: "Profile",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
    Component {
        name: "Settings",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
swift  == [
    Component {
        name: "App",
        children: [
            Router {
                children: [
                    Screen {
                        route: "\"home\"",
                        children: [
                            Primitive {
                                name: "Home",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                    Screen {
                        route: "\"profile\"",
                        children: [
                            Primitive {
                                name: "Profile",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                    Screen {
                        route: "\"settings\"",
                        children: [
                            Primitive {
                                name: "Settings",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
    Component {
        name: "Home",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
    Component {
        name: "Profile",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
    Component {
        name: "Settings",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
kotlin == [
    Component {
        name: "App",
        children: [
            Router {
                children: [
                    Screen {
                        route: "\"home\"",
                        children: [
                            Primitive {
                                name: "Home",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                    Screen {
                        route: "\"profile\"",
                        children: [
                            Primitive {
                                name: "Profile",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                    Screen {
                        route: "\"settings\"",
                        children: [
                            Primitive {
                                name: "Settings",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
    Component {
        name: "Home",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
    Component {
        name: "Profile",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
    Component {
        name: "Settings",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
