crates/flux-parity/tests/snapshots/parity__parity_b36_async.snap
---
source: crates/flux-parity/tests/parity.rs
assertion_line: 41
expression: serialized
---
verdict: equivalent

 dev    == [
    Component {
        name: "UserList",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    If {
                        cond: "users.is_loading",
                        then_branch: [
                            Primitive {
                                name: "Text",
                                props: [],
                                children: [],
                            },
                        ],
                        else_branch: [
                            ForEach {
                                collection: "users.value",
                                key_path: "key:.id",
                            },
                        ],
                    },
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
swift  == [
    Component {
        name: "UserList",
        children: [
            If {
                cond: "users.is_loading",
                then_branch: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
                else_branch: [
                    ForEach {
                        collection: "users.value",
                        key_path: "key:.id",
                    },
                ],
            },
            Primitive {
                name: "Button",
                props: [],
                children: [],
            },
        ],
    },
]
kotlin == [
    Component {
        name: "UserList",
        children: [
            If {
                cond: "users.is_loading",
                then_branch: [
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
                else_branch: [
                    ForEach {
                        collection: "users.value",
                        key_path: "{it.id}",
                    },
                ],
            },
            Primitive {
                name: "Button",
                props: [],
                children: [],
            },
        ],
    },
]
