crates/flux-parity/tests/snapshots/parity__parity_b37_pure.snap
---
source: crates/flux-parity/tests/parity.rs
expression: serialized
---
verdict: equivalent

 dev    == [
    Component {
        name: "Avatar",
        children: [
            Primitive {
                name: "Image",
                props: [],
                children: [],
            },
        ],
    },
    Component {
        name: "Profile",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Avatar",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
swift  == [
    Component {
        name: "Avatar",
        children: [
            Primitive {
                name: "Image",
                props: [],
                children: [],
            },
        ],
    },
    Component {
        name: "Profile",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Avatar",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
kotlin == [
    Component {
        name: "Avatar",
        children: [
            Primitive {
                name: "Image",
                props: [],
                children: [],
            },
        ],
    },
    Component {
        name: "Profile",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Avatar",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Text",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
