crates/flux-parity/tests/snapshots/parity__parity_b38_platform.snap
---
source: crates/flux-parity/tests/parity.rs
expression: serialized
---
verdict: lowerer-unsupported
status: LowererUnsupported

dev    == [
    Component {
        name: "PlatformButton",
        children: [
            If {
                cond: "(/* unsupported expr */ 0 == \"ios\")",
                then_branch: [
                    Primitive {
                        name: "CupertinoButton",
                        props: [],
                        children: [],
                    },
                ],
                else_branch: [],
            },
        ],
    },
]
swift  == []
kotlin == []
