crates/flux-parity/tests/snapshots/parity__parity_b39_capability.snap
---
source: crates/flux-parity/tests/parity.rs
expression: serialized
---
verdict: equivalent
status: Supported

dev    == []
swift  == []
kotlin == []
