crates/flux-parity/tests/snapshots/parity__parity_flux_038_modal_open.snap
---
source: crates/flux-parity/tests/parity.rs
expression: serialized
---
verdict: equivalent

 dev    == [
    Component {
        name: "SettingsScreen",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Modal",
                        props: [],
                        children: [
                            Primitive {
                                name: "Column",
                                props: [],
                                children: [
                                    Primitive {
                                        name: "Text",
                                        props: [],
                                        children: [],
                                    },
                                    Primitive {
                                        name: "Text",
                                        props: [],
                                        children: [],
                                    },
                                ],
                            },
                        ],
                    },
                    Primitive {
                        name: "Sheet",
                        props: [],
                        children: [
                            Primitive {
                                name: "Text",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                    Primitive {
                        name: "Dialog",
                        props: [],
                        children: [
                            Primitive {
                                name: "Text",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
swift  == [
    Component {
        name: "SettingsScreen",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Modal",
                        props: [],
                        children: [
                            Primitive {
                                name: "Column",
                                props: [],
                                children: [
                                    Primitive {
                                        name: "Text",
                                        props: [],
                                        children: [],
                                    },
                                    Primitive {
                                        name: "Text",
                                        props: [],
                                        children: [],
                                    },
                                ],
                            },
                        ],
                    },
                    Primitive {
                        name: "Sheet",
                        props: [],
                        children: [
                            Primitive {
                                name: "Text",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                    Primitive {
                        name: "Dialog",
                        props: [],
                        children: [
                            Primitive {
                                name: "Text",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
kotlin == [
    Component {
        name: "SettingsScreen",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Modal",
                        props: [],
                        children: [
                            Primitive {
                                name: "Column",
                                props: [],
                                children: [
                                    Primitive {
                                        name: "Text",
                                        props: [],
                                        children: [],
                                    },
                                    Primitive {
                                        name: "Text",
                                        props: [],
                                        children: [],
                                    },
                                ],
                            },
                        ],
                    },
                    Primitive {
                        name: "Sheet",
                        props: [],
                        children: [
                            Primitive {
                                name: "Text",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                    Primitive {
                        name: "Dialog",
                        props: [],
                        children: [
                            Primitive {
                                name: "Text",
                                props: [],
                                children: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
